Changing color of test for distro images to grey. Fixing stlye.less spacing

--- a/less/style.less
+++ b/less/style.less
@@ -4,12 +4,13 @@
 body {
     background-color:#89CEDE;
     padding-bottom: 40px;
+    color: #777;
 }
 
 .distribution {
     h1 {
-		text-align: left;
-	}
+        text-align: left;
+    }
     img {
         max-width: 100%;
         border: 1px solid black;
@@ -92,7 +93,7 @@ body {
 }
 
 .platform-picker {
-        margin-bottom:10px;
+    margin-bottom:10px;
 }
 
 @media (min-width: 979px) {
@@ -108,17 +109,17 @@ body {
     .distribution {
         img {
             max-width: 100px;
-			float: left;
-			margin-right: 1em;
+            float: left;
+            margin-right: 1em;
         }
-		p {
-		    text-align: left
-			float: left;
-		}
-		.span3 {
-		    display: table;
-			margin: 1em 0;
-		}
+        p {
+            text-align: left
+            float: left;
+        }
+        .span3 {
+            display: table;
+            margin: 1em 0;
+        }
     }
 }
 
@@ -170,7 +171,7 @@ body {
 }
 
 .btn {
-        margin-left: 20px;
+    margin-left: 20px;
 }
 
 .clearfix:after {
